--- a/src/components/profileImage/profileImage.module.scss
+++ b/src/components/profileImage/profileImage.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 100px;
   margin: 0 auto;
-  width: 100px;
+  max-width: 100px;
 
   .ProfileImage {
     align-items: center;
