--- a/src/components/authorInformation/authorInformation.module.scss
+++ b/src/components/authorInformation/authorInformation.module.scss
@@ -22,6 +22,16 @@
         text-align: center;
         z-index: 1;
         .namePlace {
+            .star {
+                opacity: 0.4;
+                position: relative;
+                right: 8px;
+                top: 2px;
+                width: 20px;
+                &.active {
+                    opacity: 1;
+                }
+            }
             small {
                 color: #adadad;
                 display: block;
