--- a/src/components/userNotifications/userNotifications.module.scss
+++ b/src/components/userNotifications/userNotifications.module.scss
@@ -34,6 +34,14 @@
     // justify-content: space-between;
     margin: 10px;
     padding: 0px 0 10px;
+    span {
+      display: flex;
+      align-items: center;
+      img {
+        margin-right: 4px;
+        width: 20px;
+      }
+    }
   }
 
   h4 {
