--- a/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
+++ b/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
@@ -1,5 +1,5 @@
 .ProfileSummaryExperience {
-    background-image: url("https://i.blogs.es/ff4f41/elqk-v1wmauw09m/1366_2000.jpg");
+    // background-image: url("https://i.blogs.es/ff4f41/elqk-v1wmauw09m/1366_2000.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,7 +99,7 @@
 
     .box {
         // background: linear-gradient(45deg, #3095b3, #126781);
-        background: linear-gradient(180deg, #0f90b6a3, #032834eb);
+        // background: linear-gradient(180deg, #0f90b6a3, #032834eb);
         // background: linear-gradient(45deg, #3095b359, #81127eb5);
         // border-radius: 20px;
         // box-shadow: inset 5px 5px 4px #505050;
