--- a/src/components/awardsSummary/awardsSummary.module.scss
+++ b/src/components/awardsSummary/awardsSummary.module.scss
@@ -14,15 +14,18 @@
 .AwardsSummary {
     // --main-color: rgba(0, 0, 0, 0.54);
     // overflow: hidden;
+    background-image: url(/images/backgrounds/bg-awards-modal.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
     height: 500px;
     overflow: hidden;
     width: 290px;
     &:after {
-        background-image: url(/images/backgrounds/marco-bronce-inf.png);
+        // background-image: url(/images/backgrounds/marco-bronce-inf.png);
         background-repeat: no-repeat;
         background-size: contain;
         bottom: -6px;
-        content: "";
+        // content: "";
         display: block;
         height: 50px;
         position: absolute;
@@ -36,7 +39,7 @@
             linear-gradient(#fff 0 0) content-box,
             linear-gradient(#fff 0 0);
         border-bottom: 4px solid #167ac6;
-        content: "";
+        // content: "";
         height: 120px;
         left: 0;
         position: absolute;
@@ -60,7 +63,7 @@
             width: 266px;
         }
         &::before {
-            background-image: url("/images/backgrounds/general-bg.png");
+            // background-image: url("/images/backgrounds/general-bg.png");
             background-size: cover;
             background-position: center;
             content: "";
@@ -81,10 +84,10 @@
     }
 
     .content {
-        background-image: url(/images/backgrounds/marco-bronce-sup.png);
-        background-position: 0px 0px;
-        background-repeat: no-repeat;
-        background-size: contain;
+        // background-image: url(/images/backgrounds/marco-bronce-sup.png);
+        // background-position: 0px 0px;
+        // background-repeat: no-repeat;
+        // background-size: contain;
         min-height: 390px;
         overflow: hidden;
         padding: 40px 0px 0;
@@ -110,27 +113,23 @@
             }
         }
         .title {
-            color: white;
-            text-align: center;
-            text-transform: uppercase;
-            font-size: 26px;
-            font-style: italic;
-            font-weight: bold;
+            // color: white;
+            // text-align: center;
+            // text-transform: uppercase;
+            // font-size: 26px;
+            // font-style: italic;
+            // font-weight: bold;
 
-            background: linear-gradient(0deg, #e5961c, #f4e9a5);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            transform: none;
-            $color: rgba(0, 0, 255, 0.05);
-            // text-shadow:
-            //     2px 0 $color,
-            //     -2px 0 $color,
-            //     0 2px $color,
-            //     0 -2px $color,
-            //     1px 1px $color,
-            //     -1px -1px $color,
-            //     1px -1px $color,
-            //     -1px 1px $color;
+            // background: linear-gradient(0deg, #e5961c, #f4e9a5);
+            // -webkit-background-clip: text;
+            // -webkit-text-fill-color: transparent;
+            // transform: none;
+            // $color: rgba(0, 0, 255, 0.05);
+            .ganasteLabel {
+                display: block;
+                margin: 10px auto 0;
+                width: 150px;
+            }
         }
 
         .subtitle {
