--- a/src/components/awardsSummary/awardsSummary.module.scss
+++ b/src/components/awardsSummary/awardsSummary.module.scss
@@ -318,6 +318,7 @@
     }
 
     :global(.ProfileSummaryExperience) {
+        background-image: none;
         width: initial !important;
         > div {
             width: initial;
