--- a/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
+++ b/src/components/profileSummaryExperience/profileSummaryExperience.module.scss
@@ -1,5 +1,6 @@
 .ProfileSummaryExperience {
     // background-image: url("https://i.blogs.es/ff4f41/elqk-v1wmauw09m/1366_2000.jpg");
+    background-image: url(/images/backgrounds/bg-profile.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
