--- a/src/components/messagesTop/messagesTop.module.scss
+++ b/src/components/messagesTop/messagesTop.module.scss
@@ -1,4 +1,5 @@
 .MessagesTop {
+    bottom: 100px;
     color: #16397d;
     font-size: 13px;
     // height: 43px;
@@ -6,7 +7,6 @@
     margin: 0 auto;
     position: fixed;
     right: 0;
-    top: 42px;
     width: 352px;
     z-index: 9;
     .content {
