Servicios de trivia challenge, ajustes en la modal de premios, ajustes message top component

--- a/src/components/previewUser/previewUser.module.scss
+++ b/src/components/previewUser/previewUser.module.scss
@@ -255,12 +255,9 @@
         margin-bottom: 8px;
       }
       :global(.Coins) {
-        background: #eaeaea;
-        border-radius: 10px 0 0 10px;
-        box-shadow: 0 2px #f8af06;
         float: right;
-        margin: 4px -26px 0 0;
-        padding: 6px 10px 6px 0px;
+        margin: 4px 0px 0 0;
+        padding: 6px 10px 6px 0;
         position: relative;
       }
     }
