[Fix] Ajustes ranking

--- a/src/components/wordChallenge/wordChallenge.module.scss
+++ b/src/components/wordChallenge/wordChallenge.module.scss
@@ -95,7 +95,9 @@
 }
 
 .inputContainer {
+  flex-wrap: wrap;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 10px;
+  justify-content: center;
 }
