Add inputCode styling and update RankingComponent props in LoginInterface and DefaultSellerPage

--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -59,4 +59,11 @@
       border-radius: 5px;
     }
   }
+  
+  .inputCode {
+    text-align: center;
+    input {
+      text-align: center;
+    }
+  }
 }
