--- a/src/components/ia/ia.module.scss
+++ b/src/components/ia/ia.module.scss
@@ -110,7 +110,13 @@
                 text-decoration: underline;
             }
             button a {
+                align-items: center;
+                display: flex;
+                height: 100%;
+                justify-content: center;
+                padding: 6px 4px;
                 text-decoration: none;
+                width: 100%;
             }
             .buttons {
                 display: flex;
