--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -253,6 +253,7 @@ span.MuiBadge-badge {
 }
 
 // Toast
+/*
 .Toastify__toast-container {
   color: white;
   font-size: 15px;
@@ -337,7 +338,7 @@ span.MuiBadge-badge {
   > div {
     top: 65px;
   }
-}
+}*/
 
 .color-azul {
   color: #4d9afa;
