Fix typo in button alt text and update styles for redemption page layout

--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -5,7 +5,7 @@
     margin-top: 0px;
     width: 100%;
   }
-  .contryAndPhone {
+  :global(.contryAndPhone) {
     display: flex;
     [role="combobox"] {
       padding: 0 10px;
