--- a/src/components/challengesList/challengesList.module.scss
+++ b/src/components/challengesList/challengesList.module.scss
@@ -1,33 +1,52 @@
-.ChallengesList {
-  column-gap: 10px;
+.cardContainer {
   display: flex;
-  flex-wrap: wrap;
-  > * {
-    width: calc(50% - 10px);
-  }
-  :global(.Card) {
-    background: #07244c;
-    padding: 10px 20px 20px;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
 
-    &.done h3 {
-      text-decoration: line-through;
-    }
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  background: linear-gradient(to right, #1e3a8a, #4338ca);
+  color: white;
+}
 
-    h3 {
-      color: white;
-      margin: 0 0 10px 0;
-    }
+.cardHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-    span {
-      color: white;
-      font-size: 14px;
-    }
+.cardTitle {
+  font-weight: 600;
+  text-wrap: balance;
+  margin: 0px;
+  font-size: 1.125rem;
+}
 
-    .experience {
-      background: linear-gradient(90deg, #74ffd0, #3ac8be);
-      font-weight: bold;
-      -webkit-background-clip: text; /* para que el fondo solo aparezca donde hay texto */
-      -webkit-text-fill-color: transparent;
-    }
-  }
+.cardPoints {
+  background-color: white;
+  color: #4338ca;
+  white-space: nowrap;
+  font-weight: bold;
+  border-radius: 9999px;
+  padding: 0.25rem 0.75rem;
+  font-size: 0.875rem;
+}
+
+.cardDescription {
+  margin: 0px;
+  font-size: 0.875rem;
+  opacity: 0.9;
+}
+
+.completed {
+  opacity: 0.5;
+  text-decoration: line-through;
 }
