avances trivia multi opciones

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -161,7 +161,7 @@
 
   &.link {
     background: transparent;
-    // color: #476e96;
+    color: initial;
     font-weight: normal;
     text-decoration: underline;
     text-shadow: initial;
