--- a/src/components/itemCard/itemCard.module.scss
+++ b/src/components/itemCard/itemCard.module.scss
@@ -101,7 +101,7 @@ h3.title_destacada {
       bottom: 10px;
       display: flex;
       justify-content: center;
-      margin-bottom: 20px;
+      margin: 10px 0 10px;
       right: 0;
       z-index: 2;
 
@@ -125,7 +125,7 @@ h3.title_destacada {
       color: #2d81a9;
       display: block;
       font-size: 12px;
-      margin: 16px 10px 0;
+      margin: 0 10px 0;
       text-align: center;
     }
     .content_precio {
