--- a/src/components/previewUser/previewUser.module.scss
+++ b/src/components/previewUser/previewUser.module.scss
@@ -138,7 +138,7 @@
       border-bottom: 1px solid #424950;
       display: flex;
       height: 44px;
-      font-weight: bold;
+      font-weight: 400;
       margin: 0 0;
       // padding: 0 20px 10px;
       padding-left: 20px;
@@ -253,14 +253,22 @@
     }
   }
 
-  .closeButton {
+  .bottomContainer {
     bottom: 60px;
-    font-size: 14px;
-    left: 10px;
+    // left: 10px;
     position: absolute;
-    top: initial;
+    a {
+      align-items: center;
+      column-gap: 10px;
+      display: flex;
+      justify-content: start;
+      text-align: left;
+    }
+    .closeButton {
+      // font-size: 14px;
+      top: initial;
+    }
   }
-
   // .elementToCloseBgBlack {
   //   height: 100vh;
   //   position: fixed;
