--- a/src/components/wordChallenge/wordChallenge.module.scss
+++ b/src/components/wordChallenge/wordChallenge.module.scss
@@ -34,6 +34,7 @@
       background: linear-gradient(90deg, #74ffd0, #3ac8be);
       font-weight: bold;
       background-clip: text;
+      display: inline-block;
       -webkit-text-fill-color: #0000;
     }
   }
@@ -100,4 +101,24 @@
   flex-direction: row;
   gap: 10px;
   justify-content: center;
+}
+
+.triviaOptions {
+  // column-gap: 10px;
+  // display: flex;
+  // justify-content: center;
+  > * {
+    background-color: white;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    text-align: center;
+    &:hover {
+      cursor: pointer;
+    }
+    &.selected {
+      background: linear-gradient(228deg, #7a0ba19e 0%, #003875 100%);
+      color: white;
+    }
+  }
 }
