--- a/src/components/messagesTop/messagesTop.module.scss
+++ b/src/components/messagesTop/messagesTop.module.scss
@@ -1,14 +1,19 @@
 .MessagesTop {
-  bottom: 100px;
+  bottom: 10px;
   color: #16397d;
   font-size: 13px;
-  // height: 43px;
   left: 0;
   margin: 0 auto;
   position: fixed;
   right: 0;
   width: 352px;
-  z-index: 5;
+  z-index: 9999;
+
+  &.closeMessageTopClass {
+    margin-top: -100px;
+    opacity: 0;
+    transition: 1s ease;
+  }
 
   .content {
     align-items: center;
