--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -4,7 +4,7 @@ section.Onboarding {
   // margin: 0px auto 90px;
   width: calc(100%);
   .bannerCaribeConf2025 {
-    border-bottom: 1px solid #f79c01;
+    // border-bottom: 1px solid #f79c01;
     border-radius: 10px;
     color: transparent;
     display: block;
