--- a/src/components/pulseIndicator/pulse-indicator.scss
+++ b/src/components/pulseIndicator/pulse-indicator.scss
@@ -1,9 +1,9 @@
 .PulseIndicatorComponent {
     .pulse-indicator {
         animation: pulse 1.5s infinite;
-        background-color: #931a6f;
+        background-color: #53dbcc;
         border-radius: 50%;
-        box-shadow: 0 0 0 rgba(255, 0, 0, 0.4);
+        box-shadow: 0 0 0 rgb(83, 219, 204);
         height: 12px;
         width: 12px;
     }
@@ -29,7 +29,7 @@
 @keyframes pulse {
     0% {
         transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.4);
+        box-shadow: 0 0 0 0 rgb(83, 219, 204);
     }
     70% {
         transform: scale(1.3);
