--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -1,6 +1,6 @@
 section.Onboarding {
-  background: #19596b;
-  background-image: url(/images/backgrounds/general-bg.png);
+  background: #0e3368;
+  // background-image: url(/images/backgrounds/general-bg.png);
   // margin: 0px auto 90px;
   width: calc(100%);
   .bannerCaribeConf2025 {
